--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,10 @@ vim/.vim/plugged/
 # Zim插件
 zsh/.zim/modules/
 
+# Yazi插件
+yazi/.config/yazi/plugins
+yazi/.config/yazi/flavors
+
 # Git相关（避免循环）
 .git/
 .gitignore_global
