--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # Font
 font_family      JetBrains Mono Nerd Font
-font_size 11.0
+font_size 12.0
 
 # Cursor
 cursor_shape beam
@@ -12,8 +12,8 @@ window_margin_width 21.75
 # No stupid close confirmation
 confirm_os_window_close 0
 
-# Use fish shell
-shell fish
+# Use shell
+shell zsh
 
 # Copy
 map ctrl+c    copy_or_interrupt
@@ -34,3 +34,40 @@ map ctrl+underscore       change_font_size all -1
 map ctrl+kp_subtract       change_font_size all -1
 map ctrl+0 change_font_size all 0
 map ctrl+kp_0 change_font_size all 0
+
+
+# BEGIN_KITTY_THEME
+# Catppuccin-Mocha
+include current-theme.conf
+# END_KITTY_THEME
+
+# ========================
+# 选中即复制功能
+# ========================
+# 启用选中文本自动复制
+copy_on_select yes
+# 复制到系统剪贴板
+copy_on_select clipboard
+# 粘贴大文本时需确认（防止误操作）
+paste_actions confirm-if-large
+# 完整剪贴板控制：可读写系统和选择缓冲区
+clipboard_control write-clipboard write-primary read-clipboard read-primary
+
+# ========================
+# 实用快捷键设置
+# ========================
+# 新建标签页
+map ctrl+shift+t new_tab
+# 关闭当前标签页
+map ctrl+shift+c close_tab
+# 下一个标签
+map ctrl+shift+] next_tab
+# 上一个标签
+map ctrl+shift+[ previous_tab
+# 新建窗口
+map ctrl+shift+enter new_window
+map ctrl+shift+\ close_window
+# 切换到下一个 Kitty 窗口
+map ctrl+shift+j next_window
+# 切换到上一个 Kitty 窗口
+map ctrl+shift+k previous_window
